# stagelog-shared

./: CONSUME.md  README.md  pyproject.toml
contracts/: .gitkeep  __init__.py  internal_api_contracts.py  notification_events.py
stagelog_shared/: __init__.py  django_utils.py  internal_api.py  middleware.py
